# dir-assert

./: .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  all.html  index.html  search-index.js  settings.html  source-files.js
dir_assert/: all.html  enum.Error.html  fn.assert_paths.html  index.html  macro.assert_paths!.html  macro.assert_paths.html  sidebar-items.js
dir_assert/assert_paths/: fn.assert_paths.html
dir_assert/error/: enum.Error.html
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: assert_dirs.rs  assert_paths.rs  error.rs  lib.rs  test_result.rs
src/dir_assert/: assert_paths.rs.html  error.rs.html  lib.rs.html
tests/: acceptance.rs
tests/data/when_dir_contents_do_not_match/deep/actual/planets/: saturn.txt
tests/data/when_dir_contents_do_not_match/different_contents/actual/: sun.txt
tests/data/when_dir_contents_do_not_match/extra_elements/expected/: sun.txt
tests/data/when_dir_contents_do_not_match/file_symlink/actual/: alter.txt
tests/data/when_dir_contents_match/complex/actual/: jupiter.txt
tests/data/when_dir_contents_match/complex/actual/saturn/: moons_of_saturn.txt
tests/data/when_dir_contents_match/file_symlink/expected/: alter.txt
