[package]
name    = "dir_assert"
version = "0.1.0"
authors = ["Łukasz Biel <lukasz.biel@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = { version = "1.5.0", default-features = false }

[dev-dependencies]
test-case = "1.0.0-alpha-1"
